Added feature to get AI explanation if user's answer is wrong